--- a/assets/style.css
+++ b/assets/style.css
@@ -1,28 +1,51 @@
-
-/* body {
-    background-color:#EDEFEB;
-    font-family: "Open Sans", verdana, arial, sans-serif;
-  } */
 /* 
+body {
+    background-color:#864e11;
+    font-family: "Open Sans", verdana, arial, sans-serif;
+  }  */
+
+
+  body {
+    background-image:  url("chocolate2png.png");
+    background-repeat: repeat-x;
+    background-color: #ddd0bc;
+    background-size: 250px 150px;}
+   
+      
+  .box_info{
+    border-radius: 20px;
+    background-color: #b9956d54;    
+    margin: 2px;
+    box-shadow: 2px 2px 2px lightgrey;
+    justify-content: center;
+    width: 50%;
+    height:auto;
+    text-align: center;
+    padding-bottom: 4px;
+    padding-top: 4px;
+    }
+  
   .footer {
     position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #4b9072a7;
+    background-color: #4b907299;
     padding-left: 1%;
-  } */
+  } 
 
+  /*#b3a2997a*/
+  /*3a150249*/
   .box {
     border-radius: 20px;
-    background-color: #F9F9F8;
+    background-color: #e1dcd9d0;
     margin: 10px;
     padding: 25px;
     box-shadow: 2px 2px 2px lightgrey;
   }
 
   .title_vis {
-      align-self:'center';
+     margin-top: "0";font-weight: "bold";text-align: "center"
     
     }
 
