--- a/assets/style.css
+++ b/assets/style.css
@@ -18,11 +18,11 @@ body {
     margin: 2px;
     box-shadow: 2px 2px 2px lightgrey;
     justify-content: center;
-    width: 50%;
-    height:auto;
+    width: 30%;
+    height: 20%;
     text-align: center;
-    padding-bottom: 4px;
-    padding-top: 4px;
+    padding-bottom: 1px;
+    padding-top: 1px;
     }
   
   .footer {
@@ -78,12 +78,80 @@ body {
   }
   
   .radio input[type="radio"]:checked + label {
-    background-color: #e98b1044;              
-    border: 2px solid #F9F9F8;
+    background-color: #14e910cd;              
+    border: 2px solid #f0f006;
   }
   
   .radio label:hover {
-    background-color: #e98b1044;
+    background-color: #c8bdaf44;
     border: 2px solid #e98b1044;
   }
+
+  #treeyear_slider .c-slider-track {
+    background-color: indigo;
+  }
+
+/* Buttons–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #555;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  color: #333;
+  border-color: #888;
+  outline: 0;
+}
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #fff;
+  background-color: #33c3f0;
+  border-color: #33c3f0;
+}
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #fff;
+  background-color: #1eaedb;
+  border-color: #1eaedb;
+}
+
+
 
