--- a/assets/style.css
+++ b/assets/style.css
@@ -11,11 +11,34 @@ body {
     background-color: #ffffff;
     background-size: 250px 150px;
     font-family: Optima, sans-serif;}
+    
    
+    
+    .rc-track {
+      background-color:#c37b71ab;
+    }
+    
+    .rc-dot-active {  
+      border-color: #C37B71;
+      border: solid 2px #C37B71;
+    }
+    
+    .rc-handle {
+      background-color: red;
+      border-color: red;
+    }
+    
+    .rc-handle:hover {
+      border-color: red;
+    }
+    
+    .rc-handle-active:active {
+      border-color: red;
+    }
       
   .box_info{
     border-radius: 20px;
-    background-color: #b9956d54;    
+    background-color: #C37B71;    
     margin: 2px;
     box-shadow: 2px 2px 2px lightgrey;
     justify-content: center;
