--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,12 @@
-/* 
-body {
-    background-color:#864e11;
-    font-family: "Open Sans", verdana, arial, sans-serif;
-  }  */
-
-
   body {
     background-image:  url("chocolate2png.png");
     background-repeat: repeat-x;
     background-color: #ffffff;
     background-size: 250px 150px;
-    font-family: Optima, sans-serif;}
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif}
     
    
-    
+  /* Slider */  
     .rc-slider-track {
       background-color:#c37b71ab;
     }
@@ -36,11 +29,14 @@ body {
       border-color: #C37B71;
     }
       
+
+  /* Boxes Word Cloud */  
   .box_info{
     border-radius: 20px;
     background-color: #C37B71;    
     margin: 2px;
     box-shadow: 2px 2px 2px lightgrey;
+    color: rgb(255, 255, 255);
     justify-content: center;
     width: 30%;
     height: 20%;
@@ -48,18 +44,8 @@ body {
     padding-bottom: 1px;
     padding-top: 1px;
     }
-  
-  .footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #4b907299;
-    padding-left: 1%;
-  } 
 
-  /*#b3a2997a*/
-  /*3a150249*/
+ /* Boxes layout */
   .box {
     border-radius: 20px;
     background-color: #F2D2BD;
@@ -68,16 +54,15 @@ body {
     box-shadow: 2px 2px 2px lightgrey;
   }
 
+ /* Titles */
   .title_vis {
-     margin-top: "0";font-weight: "bold";text-align: "center"
+     margin-top: "0";
+     font-weight: "bold";
+     text-align: "left";
     
     }
 
-/* 
-  .drop_down {  
-    margin: '4px'; box-shadow: '0px 0px #ebb36a'; border-color: '#ebb36a'
-            } */
-
+  /* Radio Items */
   .radio {
     display:flex;
     justify-content: left;
@@ -111,71 +96,16 @@ body {
     border: 2px solid #ba6e64;
   }
 
-  #treeyear_slider .c-slider-track {
-    background-color: indigo;
-  }
 
-/* Buttons–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.button,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  display: inline-block;
-  height: 38px;
-  padding: 0 30px;
-  color: #555;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 600;
-  line-height: 38px;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
-  cursor: pointer;
-  box-sizing: border-box;
-}
-.button:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0;
-}
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #fff;
-  background-color: #33c3f0;
-  border-color: #33c3f0;
-}
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: #fff;
-  background-color: #1eaedb;
-  border-color: #1eaedb;
-}
+  /* Dropdown Word Cloud*/
+  .custom-dropdown .Select--multi .Select-value {
+  background-color: #C37B71;
+  border-color: #ba6e64;
+  color: rgb(255, 255, 255);
+  }
+  
+  
+
 
 
 
