--- a/assets/style.css
+++ b/assets/style.css
@@ -3,9 +3,11 @@
     background-repeat: repeat-x;
     background-color: #ffffff;
     background-size: 250px 150px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif}
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  }
     
-   
+
+
   /* Slider */  
     .rc-slider-track {
       background-color:#c37b71ab;
